--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"tailwindcss": "^4.0.15",
 		"typescript": "^5.8.2",
 		"typescript-eslint": "^8.27.0",
-		"vite": "^6.2.2"
+		"vite": "^6.2.2",
+		"wrangler": "latest"
 	},
 	"dependencies": {
 		"bits-ui": "^1.3.13"
