--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"typescript": "^5.8.2",
 		"typescript-eslint": "^8.27.0",
 		"vite": "^6.2.2",
-		"wrangler": "latest"
+		"wrangler": "latest",
+		"@cloudflare/workers-types": "latest"
 	},
 	"dependencies": {
 		"bits-ui": "^1.3.13"
