--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"typescript-eslint": "^8.27.0",
 		"vite": "^6.2.2",
 		"wrangler": "latest",
-		"@cloudflare/workers-types": "latest"
+		"@cloudflare/workers-types": "latest",
+		"@number-flow/svelte": "latest"
 	},
 	"dependencies": {
 		"bits-ui": "^1.3.13"
